--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -5,7 +5,7 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
 <link rel="import" href="./aq-community-home-searchbar.html">
-<link rel="import" href="./aq-community-home-post-item.html">
+<link rel="import" href="./aq-community-home-post-item2.html">
 <link rel='import' href='../common/aq-pagination.html'>
 <link rel='import' href='../../icons/aq-iconset.html'>
 
@@ -46,6 +46,8 @@
             margin-top: 20px;
             color: #24293d;
             width: 90%;
+            
+            overflow-y: scroll;
           }
 
 
@@ -74,6 +76,7 @@
 
         #allposts {
             margin-top: 50px;
+            --margin-left:auto;
         }
 
         #ifsearch {
@@ -83,8 +86,6 @@
         paper-tab.iron-selected {
           color: teal;
         }
-  
-        
 
     </style>
     <template>
@@ -108,21 +109,29 @@
           value = "{{aimsquant}}">
         </iron-localstorage>
 
-        <div id='container' class="layout vertical flex">
-            <div id="header">
-            <p> AimsQuant Community</p>
-            <i style="margin-bottom:50px; color:teal;">Share, Learn and Code</i>
+        <div id='container' class="layout vertical">
+            
+            <div class="layout horizontal wrap ">
+              <div id="header">
+                <p> AimsQuant Community</p>
+                <i style="margin-bottom:50px; color:teal;">Share, Learn and Code</i>
+              </div>
+
+              <div class="flex"></div>
+  
+              <aq-community-home-searchbar id='searchbar' 
+                                      class="self-center">
+              </aq-community-home-searchbar> 
+            
             </div>
 
-            <div class="wrap flex_container">
-            <aq-community-home-searchbar></aq-community-home-searchbar>
-
+          
             <div id="ifsearch">
               <p style="font-size: 16px;">Search results for: 
                 <i>"[[searchParam.q]]"</i>
               </p>
             </div>
-            </div>
+            
 
             <paper-tabs on-iron-select="onActivateTab" id="community-tabs" selected="{{selected}}" noink>
                 <paper-tab id="popular">Popular</paper-tab>
@@ -132,10 +141,9 @@
             </paper-tabs>
 
             <div id='allposts'>
-                <div>
                   <template is="dom-repeat" items="{{items}}" initial-count=10>
-                      <aq-community-home-post-item
-                        topic-address="#/dashboard/community/topics/{{item._id}}"
+                      <aq-community-home-post-item2
+                        topic-address="/dashboard/community/topics/{{item._id}}"
                         item-id = "{{item._id}}"
                         topic-heading="{{item.title}}"
                         author-firstname="{{item.user.firstName}}"
@@ -144,10 +152,11 @@
                         post-date="{{format(item.createdAt)}}"
                         total-replies={{item.replies.length}}
                         total-views="{{item.views}}"
-                        post-category="{{item.category}}">
-                      </aq-community-home-post-item>
+                        post-category="{{item.category}}"
+                        post-content="{{item.markdownText}}">
+                      </aq-community-home-post-item2>
                   </template>
-                </div>
+                
             </div>
 
             <div class="flex"></div>
@@ -221,6 +230,8 @@
             listeners :{
               'search-action':'onSearch',
               'view-action':'onView',
+              'detail-action':'onDetail',
+
             },
 
             ready: function() {
@@ -241,12 +252,10 @@
               if (x) {
                   var community = JSON.parse(x).community;
                   if (community) {
-                      console.log("latpage:" + community.lastPage);
                       this.currentPage = community.lastPage;
                   } else {
                     this.aimsquant.community = {lastPage:1};
                     this.$.localStorage.save();
-                    console.log(localStorage);
                   }
               }                  
             },
@@ -267,6 +276,7 @@
             },
 
             onGetAllThreadsResponse: function(data) {
+              console.log(data.detail.response);
                 this.items = data.detail.response.threads;
             },
 
@@ -289,6 +299,7 @@
               
               if(e.detail.text!="") {
                 this.$$('#ifsearch').style.display = 'block';
+
               } else {
                 this.$$('#ifsearch').style.display = 'none';
               }
@@ -311,17 +322,23 @@
                 this.saveCurrentPage();
               }
 
+              
+              this.fire('scroll-top');
+             
               this.processparams();
             },
 
             saveCurrentPage: function() {
-              console.log(localStorage);
               if(this.aimsquant) {
                 this.aimsquant.community.lastPage = this.currentPage;
                 this.$.localStorage.save();
               }
-               console.log(localStorage);
             },
+
+            onDetail: function(e) {
+              this.router.go(e.detail.link);
+            },
+
 
         });
     </script>
