--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -18,6 +18,7 @@
 			margin-bottom: 13px;
 			height:240px;
 			min-width: 500px;
+			width:100%;
 			--border-top:2px solid teal !important;
 			border:1px solid teal;
 			margin-right: 5px;
@@ -115,25 +116,31 @@
 					<paper-checkbox noink id='checkbox' on-tap = 'onCheck'></paper-checkbox>	
 					<p>Backtest: <strong>[[formatIndex(index)]]</strong></p>
 					<div class="flex"></div>
-		          	<paper-icon-button  title="Detail" on-tap="onDetail" icon="vaadin-icons:chart"></paper-icon-button>
-		          	<paper-icon-button class="icons" title="Share" on-tap="onShare" icon="vaadin-icons:share-square"></paper-icon-button>
+		          	
+					<template is='dom-if' if="[[detailIcon]]">
+		          		<paper-icon-button  title="Detail" on-tap="onDetail" icon="vaadin-icons:chart"></paper-icon-button>
+		          	</template>
+
+		          	<template is='dom-if' if="[[shareIcon]]">
+		          		<paper-icon-button class="icons" title="Share" on-tap="onShare" icon="vaadin-icons:share-square"></paper-icon-button>
+		          	</template>
 					
 				</div>
 
 				<div class=" container-int layout horizontal">
 					<div class="layout vertical metric">	
-						<span class="bold-span">[[backtest.startDate]] - [[backtest.endDate]]</span>
+						<span class="bold-span">[[processedBacktest.startDate]] - [[processedBacktest.endDate]]</span>
 						<span>Date Range</span>		
 					</div>
 
 					
 					<div class="layout vertical metric flex">	
-						<span id="createdAt" class="bold-span flex">[[backtest.createdAt]]</span>
+						<span id="createdAt" class="bold-span flex">[[processedBacktest.createdAt]]</span>
 						<span>Created</span>					
 					</div>	
 
 					<div class="layout vertical metric flex">	
-						<span class="bold-span">[[backtest.status]]</span>
+						<span class="bold-span">[[processedBacktest.status]]</span>
 						<span>Status</span>		
 					</div>
 
@@ -148,60 +155,22 @@
 			<div class="card-actions">
 				<div class="self-center wrap flex_container layout horizontal">
 
-					<template is='dom-repeat' items="{{backtest.metrics1}}">
+					<template is='dom-repeat' items="{{processedBacktest.metrics1}}">
 						<aq-backtest-metric-item class="flex width_tab" 	metric-name="[[item.metricName]]" 
 							metric-value="[[item.metricValue]]"
 							metric-desc="[[item.metricDesc]]">
 						</aq-backtest-metric-item>
 					</template>
-					<!--aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
-
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
-
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
-
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item-->
 							
 				</div>
 
 				<div class="self-center wrap flex_container layout horizontal">
-					<template is='dom-repeat' items="{{backtest.metrics2}}">
+					<template is='dom-repeat' items="{{processedBacktest.metrics2}}">
 						<aq-backtest-metric-item class="flex width_tab" 	metric-name="[[item.metricName]]" 
 							metric-value="[[item.metricValue]]"
 							metric-desc="[[item.metricDesc]]">
 						</aq-backtest-metric-item>
 					</template>
-					<!--aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
-
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
-
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
-
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
-						metric-value="2.47"
-						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item-->
 									
 				</div>
 
@@ -223,13 +192,29 @@
 					value:false,
 				},
 
+				detailIcon:{
+					type:Boolean,
+					value:false,
+				},
+
+				shareIcon:{
+					type:Boolean,
+					value:false,
+				},
+
 				index: String,
+
+				processedBacktest:{
+					type:Object,
+					value:{},
+				},
 
 			},
 
+
 			ready: function() {
 
-				this.set('backtest.metrics1',[{
+				this.set('processedBacktest.metrics1',[{
 				            		"metricName":"Total Return", 
 				            		"metricValue":"-", 
 				            		"metricDescription":"Total Return"
@@ -250,7 +235,7 @@
 									"metricDescription":"Sharpe Ratio"
 								}]);
 								
-				this.set('backtest.metrics2', [{	
+				this.set('processedBacktest.metrics2', [{	
 									"metricName":"Sortino Ratio",
 									"metricValue":"-",
 									"metricDescription":"Sortino Ratio"
@@ -295,7 +280,7 @@
 
 				var data = this.backtest.output.summary;
 
-				this.set('backtest.metrics1' ,[{
+				this.set('processedBacktest.metrics1' ,[{
 				            		"metricName":"Total Return", 
 				            		"metricValue":data.totalreturn.toFixed(2).toString()+'%', 
 				            		"metricDescription":"Total Return"
@@ -307,7 +292,7 @@
 								},
 							{"metricName":"Volatility", "metricValue":data.annualstandarddeviation.toFixed(2).toString()+'%', "metricDescription":"Volatility"},
 							{"metricName":"Sharpe Ratio", "metricValue":data.sharperatio.toFixed(2), "metricDescription":"Sharpe Ratio"},]);
-				this.set('backtest.metrics2', [ 
+				this.set('processedBacktest.metrics2', [ 
 								{"metricName":"Sortino Ratio", "metricValue":"2.5", "metricDescription":"Sortino Ratio"},
 								{"metricName":"Max Drawdown", "metricValue":data.maxdrawdown.toFixed(2).toString()+'%', "metricDescription":"Max Drawdown"},
 								{"metricName":"Calmar Ratio", "metricValue":"4.3", "metricDescription":"Calmar Ratio"},
@@ -317,10 +302,10 @@
 				//this.set('metrics1', metricsArray1);
 				//this.set('metrics2', metricsArray2);
 
-				this.set('backtest.startDate',this.formatDate(this.backtest.settings.start));
-				this.set('backtest.endDate',this.formatDate(this.backtest.settings.end));
-				this.set('backtest.status', this.backtest.status.charAt(0).toUpperCase() + this.backtest.status.slice(1));
-				this.set('backtest.createdAt', this.formatDateTime(this.backtest.createdAt));
+				this.set('processedBacktest.startDate',this.formatDate(this.backtest.settings.start));
+				this.set('processedBacktest.endDate',this.formatDate(this.backtest.settings.end));
+				this.set('processedBacktest.status', this.backtest.status.charAt(0).toUpperCase() + this.backtest.status.slice(1));
+				this.set('processedBacktest.createdAt', this.formatDateTime(this.backtest.createdAt));
 			},
 
 			formatDate: function(date) {
