--- a/src/components/common/aq-dropdown.html
+++ b/src/components/common/aq-dropdown.html
@@ -22,13 +22,14 @@
 			margin:0px;
 			border-radius: 5px;	
 			border: var(--dropdown-border, 1px solid #e5e5e5);
-			border-color: var(--dropdown-background-color, #e5e5e5);
+			--border-color: var(--dropdown-background-color, #e5e5e5);
 			width: var(--dropdown-width,100%);	
  			text-transform: none;
 			font-weight: var(--dropdown-font-weight, normal);
 			font-size: var(--dropdown-font-size,13px);
 			height: var(--dropdown-height, 30px);
-			background-color: var(--dropdown-button-color, white);
+			background-color: var(--dropdown-button-background-color, white);
+			color: var(--dropdown-button-color, #24293d);
 		}
 
 		paper-button, span#category {
@@ -44,6 +45,10 @@
 			font-size: var(--dropdown-paper-menu-font-size, 13px);
 			text-decoration: none;
 			background-color: var(--dropdown-background-color, white);
+			color:var(--dropdown-color, #24293d);
+			--paper-item-selected: {
+				border: var(--dropdown-item-border, 1px solid #e5e5e5);
+			}
 		}
 
 		paper-menu-button {	
@@ -54,10 +59,13 @@
 		
 		paper-listbox {
 			--paper-listbox-background-color:var(--dropdown-background-color, white);
+			border: var(--dropdown-content-border, 1px solid #e5e5e5);
 			--border-radius: 5px;
 			--width: 100%;
 			--z-index: 1002;
 			--opacity: 1.0;
+
+
 		}
 
 		#icon {
