--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -4,7 +4,8 @@
 
 <link rel="import" href="../aq-markdown-editor.html">
 <link rel="import" href="./aq-community-previewpost.html">
-<link rel="import" href="../../dialog/aq-community-selectstrategybacktest-dialog.html">
+<link rel="import" href="../../dialog/aq-community-attachbacktest-dialog.html">
+
 <link rel='import' href='../common/aq-dropdown.html'>
 <link rel='import' href='../analyze/aq-analyze-home-backtest-item.html'>
 <link rel='import' href='../../icons/aq-iconset.html'>
@@ -27,7 +28,7 @@
       }
    
       input {
-        height: 32px;
+        height: 42px;
         font-size: 18px;
         margin-bottom: 5px;
         color:#24293d;
@@ -41,7 +42,12 @@
 
       aq-dropdown {
         --dropdown-width:220px;
-        --dropdown-height:36px;
+        --dropdown-height:46px;
+        --dropdown-button-color: teal;
+        --dropdown-background-color: #f2fbf7;
+        --dropdown-color: teal;
+        
+        --dropdown-item-border: 1px solid #c3403f;
 
       }
 
@@ -55,31 +61,52 @@
         border: 1px solid #24293d;
         height:30px;
         font-size: 13px;
+        color:teal;
+
       }
 
       #attachButton {
         position:absolute;
-        top:185px;
+        top:195px;
         right:65px;
+        z-index: 2;
       }
 
-      #attachButton paper-button {
+      #attachButton{
         border:none !important;
+
       }
 
       #buttons {
         margin-bottom: 10px;
       }
 
+      #errorMessage {
+        color:#c3403f;
+      }
+
+      #attachedMessageDiv {
+        display: none;
+        color:#c3403f;
+        font-size:14px;
+      }
+
+      #removeIcon {
+        width:32px;
+        height:32px;
+      }
+
+
     </style>
 
     <template>
-
-
         <template is='dom-if' if="[[preview]]">
           <aq-community-previewpost thread-data="[[threadData]]"></aq-community-previewpost>  
         </template>
 
+        <aq-community-attachbacktest-dialog id='btDialog'>
+        </aq-community-attachbacktest-dialog>  
+       
         <template is='dom-if' if="[[!preview]]">
         <div id='container' class="layout vertical flex">
             <div class="goBackButton layout horizontal">
@@ -87,21 +114,27 @@
             <div class="flex"><h4>Back to Community</h4></div>
           </div>
           
-            <p>Create a Post</p>
-
-            <div id='attachButton'>
-            <paper-button raised noink on-tap='onAttach'>Attach<iron-icon icon="aq-icons:attach-file"></iron-icon></paper-button>
+            <div class="layout horizontal">
+              <p class="flex">Create a Post</p>
+              
+              <div id="attachedMessageDiv" class="layout horizontal self-end">
+                <i class="self-end">[[attachedMessage]]</i>
+                <paper-icon-button id='removeIcon' class="self-end" title="Remove" on-tap='onRemoveAttached' icon="icons:remove-circle"></paper-icon-button>
+              </div>
             </div>
 
+
+            <paper-button id='attachButton' raised noink on-tap='onAttachRequest'>Attach<iron-icon icon="aq-icons:attach-file"></iron-icon></paper-button>
+            
             <div class="layout horizontal">
-                <aq-dropdown id="category_dd" options="[[categories]]"></aq-dropdown>
+                <aq-dropdown vertical-offset=46 id="category_dd" options="[[categories]]"></aq-dropdown>
                 <input id="topicInput" class="flex" label="Topic" placeholder="Heading of the Post">
             </div>
             
             <aq-markdown-editor id="editor" placeholder="Describe in detail"></aq-markdown-editor>
 
             <div id='buttons' class="layout horizontal">
-                <div><i>[[error]]</i></div>
+                <div id='errorMessage'><i>[[error]]</i></div>
                 <div class="flex"></div>
                 <paper-button raised noink on-tap='onPreview'>Preview</paper-button>
 
@@ -110,10 +143,7 @@
 
         </div>
 
-        <aq-community-selectstrategybacktest-dialog id ="dialog" heading="Select Strategy-Backtest">
-        </aq-community-selectstrategybacktest-dialog>
         </template>
-
 
         <iron-ajax 
             url="http://localhost:3002/api/v2/thread" 
@@ -140,11 +170,6 @@
                   value: [{value:"Share your idea",index:0},{value:"Questions and answers",index:1},{value:"News and announcements",index:2}],
                 },
 
-                id:{
-                  type:String,
-                  value:"",
-                },
-
                 preview:{
                   type:Boolean,
                   value:false,
@@ -155,12 +180,24 @@
                 threadData:Object,
 
                 header:Object,
+
+                attachedBacktestId: String,
+
+                attachedMessage: String,
+
+                share: String,
             },
 
             listeners :{
-              'attach-pressed':'onAttach',
               'edit-clicked':'onEdit',
               'submit-clicked':'postThread',
+              'backtest-attached':'onBacktestAttached',
+            },
+
+            attached: function() {
+              if(this.attachedBacktestId) {
+                this.fire('backtest-attached',{id:this.attachedBacktestId});
+              }
             },
 
             ready: function() { 
@@ -173,12 +210,6 @@
                 }
             },
 
-            /*attached: function() {
-              //Write the sharing your startegy code and 
-              console.log(this.id);
-              console.log(this.share);  
-            },*/
-
             postThread: function() {
                 var x = this.processInput();
                 
@@ -188,33 +219,49 @@
             },
             
             onPostThreadResponse: function(data) {
-              //var data = JSON.parse(e);
-              var threadId = data.detail.response._id;   
-              this.router.go("/dashboard/community/topics/"+threadId);
+                var threadId = data.detail.response._id;   
+                this.router.go("/dashboard/community/topics/"+threadId);
             },
 
             onPostThreadError: function(data) {
-              console.log(data);
+                console.log(data);
             },
                        
-            onAttach: function() {
-              this.$.dialog.open();      
+            onAttachRequest: function() {
+                console.log("here");
+                this.$.btDialog.open(); 
+            },
+
+            onBacktestAttached: function(e) {
+                this.attachedBacktestId = e.detail.id;
+                this.attachedMessage = "Attached Backtest ID: "+this.attachedBacktestId;
+                this.$$('#attachedMessageDiv').style.display = 'block';
+            },
+
+            onRemoveAttached: function() {
+              this.attachedBacktestId = "";
+              this.attachedMessage = "";
+              this.$$('#attachedMessageDiv').style.display = 'none';
             },
 
             goBack: function() {
-              this.router.go('/dashboard/community');
+                this.router.go('/dashboard/community');
             },
 
             processInput: function() {
               const markdownText = this.$$('#editor').getContent();
               const category = this.$$('#category_dd').getSelectedValue();
               const title = this.$$('#topicInput').value;
+              var x = localStorage.getItem('my-app-storage');
+              var user = JSON.parse(x).user;
+
               this.threadData = {
                   "category": category,
                   "title": title,
                   "markdownText": markdownText,
-                  "user":{"firstName":"Shiv","lastName":"Chawala"},
-                  "updatedAt":Date(),
+                  "user":{"firstName":user.firstName,"lastName":user.lastName},
+                  "updatedAt": new Date(),
+                  "backtestId":this.attachedBacktestId,
               };
 
               if(this.threadData["title"]!="" && 
@@ -225,7 +272,7 @@
                 
                   return true;
               } else {
-                this.error = "No preview available for empty post. Please create a valid post.";
+                this.error = "No preview available for empty post. Please create a valid post and a header.";
                 return false;
               }
 
@@ -238,6 +285,8 @@
             onEdit: function() {
               this.preview = false;
             },
+
+
 
         });
     </script>
