--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -15,9 +15,9 @@
   <style>
     paper-card {
       margin-bottom: 13px;
-      height:300px;
+      height:115px;
       min-width: 600px;
-      max-width:80%;
+      --max-width:80%;
       width:80%;
       --border-top:2px solid teal !important;
       border:1px solid teal;
@@ -29,23 +29,25 @@
     }
 
     #content {
-      --height: 200px ;
-
-      height:77%;
-
-      --border-bottom:1px solid teal;
+      --height:77%;
       word-wrap: break-word;
       padding-bottom: 0px;
     }
 
     .container-int {
-      height:20%;
-      --height:30px;
+      min-height: 40px;
+      --height:20%;
     }
+
+    .header{
+      --border-bottom: 1px solid teal;
+      min-height: 40px;
+    }
+
 
     #textContent {
       height:80%;
-
+      display: none;
       overflow-y: scroll;
     }
 
@@ -91,7 +93,6 @@
       font-size: 13px;
     }
 
-
     paper-icon-button {
       color:teal;
     }
@@ -109,10 +110,6 @@
       font-size: 12px;
       margin-bottom: 5px;
       color: teal;
-    }
-
-    .header{
-      border-bottom: 1px solid teal;
     }
 
 
@@ -171,7 +168,7 @@
           </div>
 
           <div class="layout vertical metric flex"> 
-            <span class="bold-span">54</span>
+            <span class="bold-span">[[totalFollowers]]</span>
             <span>Followers</span>             
           </div>
 
@@ -194,10 +191,11 @@
         authorLastname: String,
         authorAddress: String,
         postDate: String,
-        totalReplies: String,
-        totalViews: String,
+        totalReplies: Number,
+        totalViews: Number,
         postCategory: String,
         postContent:String,
+        totalFollowers:Number,
       },
 
       getInitials(firstName, lastName) {
