Code cleanup + one more check-in to support "attach a backtest"

--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -19,8 +19,8 @@
 
         <app-route path="/dashboard/community/create" element='aq-community-createpost' bindrouter=""></app-route>
 
-        <app-route path="/dashboard/community/create/:id" element='aq-community-createpost' bindrouter=""></app-route>
-     
+        <app-route path="/dashboard/community/create/:attachedBacktestId" element='aq-community-createpost' bindrouter=""></app-route>
+       
      </app-router>
   </template>
 
