1. Modified backtest-home item's CSS and placement (for last reply) 2. Modified icons CSS

--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -89,51 +89,20 @@
 		}
 
 		.iconButton {
-			outline:1px solid #cf6766;;
+			outline:1px solid teal;
+			padding:5px;
 			width:35px;
-    		--height:25px;
     		margin-right: 10px;
-    		min-width:25px;
-    		max-width:35px;
-    		color: white; --#188364; --#24293d; 
-    		background-color: #cf6766;
-		}
-
-		iron-icon {
-			--width:25px;
-    		--height:25px;
+    		color: #cf6766;
+    		--paper-icon-button-disabled-text:grey;
+    		--paper-icon-button-disabled:{
+				color: #cacaca !important;
+			};
 		}
 
 		.iconButton:active {
-			padding: 10px;
+			padding: 8px;
 		}
-
-		.iconButton {
-			--paper-icon-button-disabled-text:#f2d9D9;
-		}
-
-		paper-icon-button {
-			--paper-icon-button-disabled:{
-				--background-color: #f2d9D9 !important;
-				color: #cacaca !important;
-			};
-		}
-
-		paper-icon-button {
-			--paper-icon-button-disabled-text:grey;
-		}
-
-		paper-button {
-			--paper-button-disabled:{
-				--background-color: #f2d9D9 !important;
-				color: #cacaca !important;
-			};
-		}
-
-		paper-button {
-			--paper-button-disabled-text:grey;
-		}
-	
 		
 	</style>
 	
