--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -78,15 +78,16 @@
 
 		.iconButton {
 			outline:1px solid teal;
-			width:40px;
-    		height:40px;
+			padding:5px;
+			width:35px;
+    		height:35px;
     		margin-right: 10px;
-    		--min-width:25px;
-    		--max-width:35px;
-    		color: #cf6766; --#188364; --#24293d; 
-    		--background-color: --dsdsd;
-    		--margin:auto 0;
+    		color: #cf6766;
     		margin-bottom: 40px;
+		}
+
+		.iconButton:active {
+			padding: 8px;
 		}
 
 		paper-radio-button {
