--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -9,104 +9,82 @@
 	<style>
 
 		#search {
-		  height: 60px;
-		  line-height: 48px;
-		  --margin-bottom: 12px;
-		  position: relative;
-		  display:none;
-		  z-index:2;
+		  	height: 60px;
+		  	line-height: 48px;
+		  	position: relative;
+		  	display:none;
+		  	z-index:2;
 		}
 	
 		#search iron-icon {
-		  margin-left: 16px;
-		  margin-right: 8px;
-		  position: absolute;
-		  top: 12px;
-		  left: 2px;
+		  	margin-left: 16px;
+		  	margin-right: 8px;
+		  	position: absolute;
+		  	top: 12px;
+		  	left: 2px;
 		}
 
 		#search paper-icon-button {
-		  margin-left: 8px;
-		  margin-right: 8px;
-		  position: absolute;
-		  top: 6px;
-		  left: 2px;
+		  	margin-left: 8px;
+		  	margin-right: 8px;
+		  	position: absolute;
+		  	top: 6px;
+		  	left: 2px;
 		}
 
 		#searchbox {
-		  height: 46px;
-		  -webkit-appearance: none;
-		  line-height: 46px;
-		  border: 0;
-		  margin: 0;
-		  padding-left: 50px;
-		  border: 1px solid #e5e5e5;
-		  @apply(--paper-font-body1);
-		  width:100%;
-		  font-size: 16px;
-		  z-index: 2;
-	    	background-color: #eceff1;
-		  --border-color: #cfd8dc;
+		  	height: 46px;
+		    -webkit-appearance: none;
+		  	line-height: 46px;
+		  	border: 0;
+		  	margin: 0;
+		  	padding-left: 50px;
+		  	border: 1px solid #e5e5e5;
+		  	@apply(--paper-font-body1);
+		  	width:100%;
+		  	font-size: 16px;
+		  	z-index: 2;
+			background-color: #eceff1;
 		}
 
 		#searchbox:focus {
-		  outline: 0;
-		  background-color: #eceff1;
-		  border-color: #cfd8dc;
+	  		outline: 0;
+		  	background-color: #eceff1;
+		  	border-color: #cfd8dc;
 		}
 
 		#searchbox::-webkit-search-cancel-button{
-		  position: relative;
-		  right: 15px;
+		  	position: relative;
+		  	right: 15px;
 		}
 
 		.toolbar {
 			height: 60px;
 			width: 100%;
-		    --border:1px solid;
 		    margin-bottom: 10px
 		    margin-top:0px;
 		}
 
 		#menu-icons {
 			position:relative;
-			--margin:0;
-			--padding:0;
-			--margin-right:0;
-			--width:30%;
-			--right:0;
 			float:right;
-			--left:100px;
 			margin: auto 0;
 		}
 
 		.iconButton {
-			outline:1px solid #cf6766;;
+			outline:1px solid teal;
+			padding:5px;
 			width:35px;
-    		height:35px;
     		margin-right: 10px;
-    		min-width:25px;
-    		max-width:35px;
-    		color: white; --#188364; --#24293d; 
-    		background-color: #cf6766;
+    		color: #cf6766;
+    		--paper-icon-button-disabled:{
+				color: #cacaca !important;
+			};
+			--paper-icon-button-disabled-text:grey;
 		}
 
 		.iconButton:active {
-			padding: 10px;
-		}
-
-		.iconButton {
-			--paper-icon-button-disabled-text:#f2d9D9;
-		}
-
-		paper-icon-button {
-			--paper-icon-button-disabled:{
-				--background-color: #f2d9D9 !important;
-				color: #cacaca !important;
-			};
-		}
-		paper-icon-button {
-			--paper-icon-button-disabled-text:grey;
+			padding: 8px;
 		}
 
 		p {
