--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -33,14 +33,12 @@
 			height:73px;
 			--border-bottom:1px solid teal;
 			--border-right:1px solid teal;
-
 		}
 
-		.detailmetric span{
+		.detailmetric span {
 			vertical-align: center;
 			text-align: center;
 			margin-top:15px;
-
 		}
 
 		.mdcontainer {
@@ -79,7 +77,6 @@
 		    text-align: -webkit-center;
 		    color:#24293d;
 		    border:1px solid teal;
-		    
 		}
 
 		.flex_container{
@@ -100,14 +97,13 @@
 	</style>
 
 	<template>
-		<div class="layout">
 			<paper-card class="flex detail layout vertical paper_body">
 				<div id='detail-header' class="layout horizontal">
 					<span class="self-center">Equity Curve</span>
 					<div class="flex"></div>	
 					
 					<paper-tabs noink selected="{{graphType}}">
-						<paper-tab>Cum. Return</paper-tab>
+						<paper-tab>Cumulative Return</paper-tab>
 						<template is='dom-if' if='[[!active]]'>
 							<!--paper-tab>Net Value</paper-tab-->
 							<paper-tab>Monthly Returns</paper-tab>
@@ -120,15 +116,31 @@
 				
 				<!--template is='dom-if' if="[[netValueData]]"-->
 
-					<nvd3-line 
-			  			id="cumRetLineChart" 
-			  			height=300
-			  			show-legend 
-			  			use-interactive-guideline 
-			  			auto-resize
-			  			no-data="Fetching Data" 
-			  			data="[[cumRetData]]">
-			  		</nvd3-line>
+					<div class="layout vertical">
+						<nvd3-line 
+				  			id="cumRetLineChart" 
+				  			height=250
+				  			show-legend 
+				  			use-interactive-guideline 
+				  			auto-resize
+				  			no-data="Fetching Data" 
+				  			data="[[cumRetData]]">
+				  		</nvd3-line>
+
+				  		<template is='dom-if' if="[[hasTrackVarData]]">
+					  		<nvd3-line 
+					  			id="trackVarLineChart" 
+					  			height=150
+					  			show-legend 
+					  			use-interactive-guideline 
+					  			auto-resize
+					  			no-data="Fetching Data" 
+					  			data="[[trackVarData]]">
+					  		</nvd3-line>
+				  		</template>
+			  		</div>
+
+			  		<!--/template-->
 
 			  		<template is='dom-if' if='[[!active]]'>
 					<!--nvd3-line 
@@ -162,7 +174,6 @@
 	
 		  		</iron-pages>
 			      
-
 				<div id='detail-header' class="layout horizontal flex">
 					<span class="self-center">Risk Metrics</span>
 					<div class="flex"></div>	
@@ -179,7 +190,7 @@
 					</template>			
 				</div>
 			</paper-card>	
-		</div>
+		
 
 		<iron-signals id='datasignal' on-iron-signal-point-data='onBacktestData' on-iron-signal-bulk-data='onBacktestData'></iron-signals>
 
@@ -219,13 +230,23 @@
 				},
 
 				netValueData: {
-					type:Object, 
+					type:Array, 
 					value:[],
 				},
 
 				cumRetData:{
-					type:Object,
+					type:Array,
 					value:[],
+				},
+
+				trackVarData:{
+					type:Array,
+					value:[],
+				},
+
+				hasTrackVarData:{
+					type:Boolean,
+					value:false,
 				},
 
 				maxLineData:{
@@ -275,6 +296,21 @@
 		            "Content-Type": "application/json"};  
 		        }
 
+				if(this.active) {
+					this.reset();
+					//this.$$('#cumRetLineChart').refresh();
+					//this.$$('#trackVarLineChart').refresh();
+					this.subscribeData();
+				} else {
+					this.reset();
+					//this.$$('#cumRetLineChart').refresh();
+					//this.$$('#trackVarLineChart').refresh();
+					//this.$$('#barChart').refresh();
+					this.requestStaticData();
+				}	
+			},
+
+			resetMetrics: function() {
 				this.metrics = [{
 				            		"metricName":"Total Return", 
 				            		"metricValue":"-", 
@@ -336,26 +372,28 @@
 								 	"metricDescription":"Avg. Concentration"
 							 	},];
 
-				if(this.active) {
-					this.reset();
-					this.subscribeData();
-				} else {
-					this.reset();
-					this.requestStaticData();
-				}	
 			},
 
 			_isActiveChanged: function(newVal, oldVal) {
 				if((oldVal + 1) && newVal) {
+					
+					console.log("Came Here");
 					this.reset();
-					this.subscribeData();
+					this.async(this.subscribeData, 1000);
+
 				} 
 			},
 
 			reset: function() {
 				this.netValueData = [];
+				this.splice('cumRetData',0, this.cumRetData.length);
 				this.barData = [];
+				this.trackVarData = [];
+				this.resetMetrics();
 				this.counter = 0;
+				this.hasTrackVarData = false;
+				this.$$('#cumRetLineChart').refresh();
+
 			},
 
 			subscribeData: function() {
@@ -371,14 +409,13 @@
 				}
 
 				if (e.detail.outputtype == "performance") {	
-					this.addLineData(e.detail);
+					this.addRealTimeData(e.detail);
 				}
 			},
 
 			onBacktestBulkData: function(e) {
 				
 				var data = e.detail;
-
 				if(data && data.length > 0) {
 					this.addLineBulkData(e.detail);	
 				}
@@ -387,56 +424,92 @@
 			addLineBulkData: function(data) {
 				for(i in data) {
 					if (data[i].outputtype=="performance") {
-						this.addLineData(data[i]);
+						this.addRealTimeData(data[i]);
 					}
 				}
-
-				console.log("Bulk End");
 			},
 		
-			addLineData: function(data) {
+			addRealTimeData: function(data) {
+				var legends = ["Strategy (%)", "Benchmark (%)"]
+				var types = ["totalreturn","totalreturn_benchmark"];
+				var colors = ["#c3403f","#0375b4","#FFAA1D","#007849","#6e2667","#fc4a1a"];
 
-				var linepoint = {};
-            	linepoint.y = data.totalreturn.toFixed(2);
-            	//console.log(linepoint.y)
-            	linepoint.x = this.counter++; //new Date(e.detail.date);//
-           		
-           		//console.log("Length: " + this.netValueData.length);
+				var typecount = 0;
+				var ct = this.counter++;
+				for(index = 0;index<types.length;index++) {
+					var linepoint = {};
+	            	linepoint.y = data[types[index]].toFixed(2);
+	            	
+	            	linepoint.x = ct;
+	           		
+	           		var scale = 5*Math.pow(10,Math.floor(Math.log10(Math.abs(linepoint.y))) - 1);
 
-           		var scale = 5*Math.pow(10,Math.floor(Math.log10(Math.abs(linepoint.y))) - 1);
+	           		this.scale = Math.max(this.scale, scale);
 
-           		this.scale = Math.max(this.scale, scale);
-
-				if (this.cumRetData.length) {	
-					this.cumRetData[0]["values"].push(linepoint);
-					
-						this.minLineData = Math.floor(Math.min(this.minLineData, 0.98*linepoint.y)/this.scale)*this.scale;
-
-						this.maxLineData = Math.ceil(Math.max(this.maxLineData, 1.02*linepoint.y)/this.scale)*this.scale;
-
-					if (this.cumRetData[0]["values"].length % 20 == 0) {
+	           		if (this.cumRetData.length == types.length) {
 						
-						this.$$('#cumRetLineChart')._chart.forceY([this.minLineData,this.maxLineData]);
-						this.$$('#cumRetLineChart').refresh();
-						this.addMetricData(data);
+							this.cumRetData[index]["values"].push(linepoint);
+							
+								this.minLineData = Math.floor(Math.min(this.minLineData, 0.98*linepoint.y)/this.scale)*this.scale;
 
+								this.maxLineData = Math.ceil(Math.max(this.maxLineData, 1.02*linepoint.y)/this.scale)*this.scale;
+
+							var len = this.cumRetData[index]["values"].length;	
+							
+							if (len %20 == 0 || len == 501) {
+								
+								this.$$('#cumRetLineChart')._chart.forceY([this.minLineData,this.maxLineData]);
+								this.$$('#cumRetLineChart').refresh();
+								this.addMetricData(data);
+							}
+
+						} else {
+			
+							this.push('cumRetData', {
+							  "key":legends[index],
+							  "color":colors[typecount++],
+							  "values": [linepoint]});
+
+							this.minLineData = linepoint.y;
+							this.maxLineData = Math.ceil(1.02 * linepoint.y/this.scale)*this.scale;  
+							
+							this.$$('#cumRetLineChart')._chart.forceY([this.minLineData,this.maxLineData]);
+							
+							//this.$$('#cumRetLineChart')._chart.forceX([0,501]);
+							
+						}
 					}
 
-				} else {
-	
-					this.cumRetData = [{
-					  "key":"Total Return (%)",
-					  "color": "#c3403f",
-					  "values": [linepoint]}];
+					if (data["variables"]) {
+						// Add variable tracker data
+						if(this.trackVarData.length) {
+							 
+							for (i=0;i<this.trackVarData.length;i++) {
+								var key = this.trackVarData[i]["key"];
+								var nvalue = data["variables"][key];
+								var linepoint = {};
+								linepoint.y = nvalue;
+								linepoint.x = this.trackVarData[i]["values"].length + 1;
+								this.trackVarData[i]["values"].push(linepoint);
+							}
 
-					this.minLineData = linepoint.y;
-					this.maxLineData = Math.ceil(1.02 * linepoint.y/this.scale)*this.scale;  
-					
-					this.$$('#cumRetLineChart')._chart.forceY([this.minLineData,this.maxLineData]);
-					
-					this.$$('#cumRetLineChart')._chart.forceX([0,501]);
-					
-				}
+							this.$$('#trackVarLineChart').refresh();
+							
+						} else {
+							for (var k in data["variables"]) {
+								var linepoint = {};
+								linepoint.y = data["variables"][k];
+								linepoint.x = 1;
+								this.push('trackVarData', {
+									"key":k,
+									"color":colors[typecount++],
+									"values":[linepoint]
+								});
+								this.hasTrackVarData = true;
+							}
+						}
+
+					}
 
 			},
 
@@ -454,13 +527,15 @@
 							{"metricName":"Volatility", "metricValue":data.annualstandarddeviation.toFixed(2).toString()+'%', "metricDescription":"Volatility"},
 							{"metricName":"Sharpe Ratio", "metricValue":data.sharperatio.toFixed(2), "metricDescription":"Sharpe Ratio"},
 							{"metricName":"Information Ratio", "metricValue":data.informationratio.toFixed(2), "metricDescription":"Information Ratio"},
-							{"metricName":"Sortino Ratio", "metricValue":"2.5", "metricDescription":"Sortino Ratio"},
-							{"metricName":"Avg. Drawdown", "metricValue":data.drawdown.toFixed(2).toString()+'%', "metricDescription":"Avg. Drawdown"},
+							//{"metricName":"Sortino Ratio", "metricValue":"2.5", "metricDescription":"Sortino Ratio"},
+							//{"metricName":"Avg. Drawdown", "metricValue":data.drawdown.toFixed(2).toString()+'%', "metricDescription":"Avg. Drawdown"},
 							{"metricName":"Max Drawdown", "metricValue":data.maxdrawdown.toFixed(2).toString()+'%', "metricDescription":"Max Drawdown"},
-							{"metricName":"Calmar Ratio", "metricValue":"4.3", "metricDescription":"Calmar Ratio"},
-							{"metricName":"Beta", "metricValue":"0.98", "metricDescription":"Beta"},
-							{"metricName":"Stability", "metricValue":"0.88", "metricDescription":"Stability"},
-							{"metricName":"Avg. Concentration", "metricValue":"0.43", "metricDescription":"Avg. Concentration"},];
+							{"metricName":"Calmar Ratio", "metricValue":data.calmarratio.toFixed(2), "metricDescription":"Calmar Ratio"},
+							{"metricName":"Beta", "metricValue":data.beta.toFixed(2), "metricDescription":"Beta"},
+							{"metricName":"Stability", "metricValue":data.stability.toFixed(2), "metricDescription":"Stability"},
+							{"metricName":"Alpha", "metricValue":data.alpha.toFixed(2).toString()+'%', "metricDescription":"Alpha"},
+							//{"metricName":"Avg. Concentration", "metricValue":"0.43", "metricDescription":"Avg. Concentration"},
+							];
 
 			},
 
@@ -470,13 +545,19 @@
 
 			onGetBacktestSuccess: function(e){
 				this.set('backtest', e.detail.response);
-				//this.createNetValueChart();
-				this.addMetricData(this.backtest.output.analytics.rolling);
-				this.createCumRetLineChart();
-				this.createMonthlyReturnBarChart();
-
-				//console.log(this.cumRetData);
-				//console.log(this.barData);
+				
+				if(this.backtest.output.analytics.rolling) {
+					this.addMetricData(this.backtest.output.analytics.rolling);
+				}
+				
+				this.async(this.createCumRetLineChart, 500);
+				this.async(this.createMonthlyReturnBarChart, 2000);
+				
+				if(this.backtest.output.variables) {
+					// this variable is used because array changes are somehow not relaying back the template
+					this.hasTrackVarData = true;
+					this.async(this.createTrackVarLineChart, 500);
+				}
 			},
 
 			createNetValueChart: function() {
@@ -550,36 +631,39 @@
 			},
 
 			createCumRetLineChart: function() {
-				var equityData = this.backtest.output.totalreturn;
-				var keys = Object.keys(equityData);
-				var linePoints = new Array(keys.length);
-				var i = 0;
 				
+				var colors = ["#c3403f","#0375b4","#FFAA1D","#007849","#6e2667","#fc4a1a"];
+				var types = ["algorithm","benchmark"];
+				var legend = ["Strategy (%)", "Benchmark (%)"];
 				var min = Infinity; 
-				var max = 0;
-				keys.sort()
-      			.forEach(function(v, i) {
-      				linePoints[i++] = {x:v, 
-										y:equityData[v]};
-          			min = Math.min(equityData[v], min)
-          			max = Math.max(equityData[v], max) 
-       			}); 
-
-  				var scale = 5*Math.pow(10,Math.floor(Math.log10(Math.abs(max))) - 1);
-
-  				
-  				min = Math.floor(0.98*min/scale,-1)*scale;
-
-				max = Math.ceil(1.02*max/scale,-1)*scale;
-
+				var max = -Infinity;
 				
-				var yAxisLabel = "Total Return (%)";
-				
-	  			this.push('cumRetData',{"key":yAxisLabel,
-				  					"color": "#c3403f",
-					  				"values":linePoints});
+				for (index =0; index<types.length;index++) {
 
+					var equityData = this.backtest.output.totalreturn[types[index]];
+					var keys = Object.keys(equityData);
+					var linePoints = new Array(keys.length);
+					var i = 0;
+					
+					keys.sort()
+	      			.forEach(function(v, i) {
+	      				linePoints[i++] = {x:v, 
+											y:equityData[v]};
+	          			min = Math.min(equityData[v], min)
+	          			max = Math.max(equityData[v], max) 
+	       			}); 
 
+	  				var scale = 5*Math.pow(10,Math.floor(Math.log10(Math.max(Math.abs(max),Math.abs(min)))) - 1);
+
+	  				min = Math.floor(0.98*min/scale,-1)*scale;
+					max = Math.ceil(1.02*max/scale,-1)*scale;
+		
+					//var yAxisLabel = "Total Return (%)";			
+		  			this.push('cumRetData',{"key":legend[index],
+					  					"color":colors[index],
+						  				"values":linePoints});
+
+		  		}
 
 	  			this.$$('#cumRetLineChart')._chart
 	  			.x(function(d) {return new Date(d.x);});
@@ -587,35 +671,49 @@
 	  			this.$$('#cumRetLineChart')._chart.xAxis
   				.axisLabel('Date')
 				.tickFormat(function(d){
-
 					return d3.time.format('%d-%m-%Y')(new Date(d));
 				 });
 
 				this.$$('#cumRetLineChart')._chart.yAxis
-				.ticks(10);
+				.ticks(Math.ceil((max - min)/scale));
 
 				this.$$('#cumRetLineChart')._chart.forceY([min,max]);
 
 				this.$$('#cumRetLineChart').refresh();
-
-				console.log("Cumret Chart: Exit")
 			},
 
 			createMonthlyReturnBarChart: function() {
-				console.log("Monthly Ret Chart: Enter")
-				var aggregatedReturns = this.backtest.output.returns.monthly;
+				
+				var colors = ["#c3403f","#0375b4","#FFAA1D","#007849","#6e2667","#fc4a1a"];
+				var types = ["algorithm","benchmark"];
+				var legend = ["Strategy (%)", "Benchmark (%)"];
+				var min = Infinity; 
+				var max = -Infinity;
+			
+				for (index=0; index<types.length;index++) {
+
+					var aggregatedReturns = this.backtest.output.returns.monthly[types[index]];
+				
+					var barPoints = new Array(Object.keys(aggregatedReturns).length);
+					
+					var i = 0;
+
+					for (var key in aggregatedReturns) {
+						barPoints[i++] = {x:key, y:aggregatedReturns[key]};
+						min = Math.min(aggregatedReturns[key], min)
+	          			max = Math.max(aggregatedReturns[key], max)
+					}
+
+					var scale = 5*Math.pow(10,Math.floor(Math.log10(Math.max(Math.abs(max),Math.abs(min)))) - 1);
+
+	  				min = Math.floor(0.98*min/scale,-1)*scale;
+					max = Math.ceil(1.02*max/scale,-1)*scale;
 		
-				var barPoints = new Array(Object.keys(aggregatedReturns).length);
-				var i = 0;
 
-				for (var key in aggregatedReturns) {
-					barPoints[i++] = {x:key, y:aggregatedReturns[key]};
-				}
-
-				this.push('barData', {"key":"Monthly Returns (%)",
-				  				"color": "#c3403f",//"#0375b4",
+					this.push('barData', {"key":legend[index],
+				  				"color": colors[index],//"#0375b4",
 					  			"values":barPoints}); 
-
+				}
 
 	  			this.$$('#barChart')._chart.xAxis
   				.axisLabel('Year/Month')
@@ -629,7 +727,74 @@
 
 				});
 
+				this.$$('#barChart')._chart.forceY([min,max]);
+
 	  			this.$$('#barChart').refresh();
+			},
+
+
+			createTrackVarLineChart: function() {
+
+				var colors = ["#c3403f","#0375b4","#FFAA1D","#007849","#6e2667","#fc4a1a"];
+
+				var min = Infinity; 
+				var max = -Infinity;
+				
+				var variablesData = this.backtest.output.variables
+
+				if (variablesData) {
+
+					var dates = Object.keys(variablesData).sort();
+							
+					for(idx=0;idx<dates.length;idx++) {
+						var datekey = dates[idx];
+	      				var trackedVars = variablesData[datekey];
+	      				var nTrackedVars = Object.keys(trackedVars).length;
+	      				var i = 0;
+	      				for (var key in trackedVars) {
+	      					var lp = {};
+
+	      					lp.y = trackedVars[key];
+	      					lp.x = datekey;
+
+	      					if (this.trackVarData.length < nTrackedVars) {
+	      						this.push('trackVarData',{
+	      							"key":key,
+	      							"color":'green',
+	      							"values":[lp]
+	      						});
+
+	      					} else {
+		      					this.trackVarData[i++]["values"].push(lp);
+	          				}
+
+	          				min = Math.min(lp.y, min)
+	          				max = Math.max(lp.y, max)
+	      				}
+      				}	 
+		       		
+					var scale = 5*Math.pow(10,Math.floor(Math.log10(Math.max(Math.abs(max),Math.abs(min)))) - 2);
+
+	  				min = Math.floor(0.98*min/scale,-1)*scale;
+					max = Math.ceil(1.02*max/scale,-1)*scale;
+				
+					this.$$('#trackVarLineChart')._chart
+		  			.x(function(d) {return new Date(d.x);});
+
+		  			this.$$('#trackVarLineChart')._chart.xAxis
+	  				.axisLabel('Date')
+					.tickFormat(function(d){
+						return d3.time.format('%d-%m-%Y')(new Date(d));
+					 });
+
+					this.$$('#trackVarLineChart')._chart.yAxis
+					.ticks(Math.ceil((max - min)/scale));
+
+					this.$$('#trackVarLineChart')._chart.forceY([min,max]);
+
+					this.$$('#trackVarLineChart').refresh();
+				}
+			
 			},
 
 			onGetBacktestError: function(e) {
@@ -647,7 +812,13 @@
 			    }
 
 			    return label(max);
-		    }
+		    },
+
+		    hasTrackVarData: function(trackVarData) {
+		    	return trackVarData.length > 0;
+		    },
+
+
 
 		});
 	</script>
